source-code/Kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-frontend
  template:
    metadata:
      labels:
        app: html-frontend
    spec:
      containers:
        - name: html-frontend
          image: YOUR_DOCKER_USERNAME/html-frontend:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: html-frontend-service
spec:
  selector:
    app: html-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
