source-code/Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: suryaprasad.xyz
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: go-backend-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: html-frontend-service
                port:
                  number: 80
